Fix the wrapping in editor query targets

--- a/tessera-frontend/src/css/tessera.scss
+++ b/tessera-frontend/src/css/tessera.scss
@@ -504,6 +504,11 @@ table.ds-property-sheet td {
     color: rgba(75,75,75,0.25);
 }
 
+/* Query editor */
+td.ds-query-target {
+  word-break: break-all;
+}
+
 /* Flot legends */
 
 .ds-legend-cell {
